--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -29,10 +29,10 @@
         <div class="text-h1">End To End Development</div>
         <div class="div-services-header-content">
           <div class="text-h4---22px black">Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</div>
-          <!-- <a href="#" class="text-button-link-1 w-inline-block">
+          <a href="#testing-tab" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>See how we do it</div>
-          </a> -->
+          </a>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new beige">
+  <div class="section-new beige" id="testing-tab">
     <div class="wrapper w-container">
       <div data-animation="cross" data-duration="500" data-infinite="1" class="slider-services-2 w-slider">
         <div class="mask w-slider-mask">
