--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -36,10 +36,14 @@
         <div class="text-h1">User Experience</div>
         <div class="div-services-header-content">
           <div class="text-h4---22px black">Digital Products we use in our daily lives should behave as good as the nicest person we know!</div>
-          <!-- <a href="#" class="text-button-link-1 w-inline-block">
+          <a href="#testing-tab-1" class="text-button-link-1-usability1 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>see how we do it</div>
-          </a> -->
+            <div>See usability testing methods</div>
+          </a>
+          <a href="#testing-tab-2" class="text-button-link-1-usability2 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>See usability testing methods</div>
+          </a>
         </div>
       </div>
     </div>
@@ -79,7 +83,7 @@
       <div class="text-h2">Improve Productivity drastically</div>
     </div>
   </div>
-  <div class="section-new-1">
+  <div class="section-new-1" id="testing-tab-1">
     <div class="wrapper-3 w-container">
       <div data-duration-in="500" data-duration-out="500" class="w-tabs">
         <div class="tabs-menu-3 w-tab-menu">
@@ -152,7 +156,7 @@
         </div>
         <div class="w-tab-content">
           <div data-w-tab="1" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Controlled Environment testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -163,7 +167,7 @@
             </div>
           </div>
           <div data-w-tab="2" class="w-tab-pane w--tab-active">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Exploratory testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -174,7 +178,7 @@
             </div>
           </div>
           <div data-w-tab="3" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Remote Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -185,7 +189,7 @@
             </div>
           </div>
           <div data-w-tab="4" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Contextual testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -196,7 +200,7 @@
             </div>
           </div>
           <div data-w-tab="5" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Contextual testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -210,7 +214,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new-2">
+  <div class="section-new-2" id="testing-tab-2">
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
         <a href="#Controlled-Environment-Testing" class="services-grid-content w-inline-block">
