--- a/ui-design.html
+++ b/ui-design.html
@@ -36,10 +36,14 @@
         <div class="text-h1">Interface Design</div>
         <div class="div-services-header-content">
           <div class="text-h4---22px black">Having interface fluent enough for the user to communicate with the system or product is fundamental necessity.</div>
-          <!-- <a href="#" class="text-button-link-1 w-inline-block">
+          <a href="#testing-tab-1" class="text-button-link-1-usability1 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>see how we do it</div>
-          </a> -->
+            <div>See usability testing methods</div>
+          </a>
+          <a href="#testing-tab-2" class="text-button-link-1-usability2 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>See usability testing methods</div>
+          </a>
         </div>
       </div>
     </div>
@@ -98,7 +102,7 @@
       <div class="text-h2">Establish a visual language for seamless interaction</div>
     </div>
   </div>
-  <div class="section-new-1">
+  <div class="section-new-1" id="testing-tab-1">
     <div class="wrapper-3 w-container">
       <div data-duration-in="500" data-duration-out="500" class="w-tabs">
         <div class="tabs-menu-3 w-tab-menu">
@@ -161,7 +165,7 @@
         </div>
         <div class="w-tab-content">
           <div data-w-tab="1" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Controlled Environment testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -172,7 +176,7 @@
             </div>
           </div>
           <div data-w-tab="2" class="w-tab-pane w--tab-active">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Exploratory testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -183,7 +187,7 @@
             </div>
           </div>
           <div data-w-tab="3" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Remote Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -194,7 +198,7 @@
             </div>
           </div>
           <div data-w-tab="4" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Contextual testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -208,7 +212,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new-2">
+  <div class="section-new-2" id="testing-tab-2">
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
         <a href="#Controlled-Environment-Testing" class="services-grid-content w-inline-block">
