--- a/ui-development.html
+++ b/ui-development.html
@@ -36,10 +36,10 @@
         <div class="text-h1">UI Development</div>
         <div class="div-services-header-content">
           <div class="text-h4---22px black">The design comes to life when the robust technologies are put in place to bring the best Experience.</div>
-          <!-- <a href="#" class="text-button-link-1 w-inline-block">
+          <a href="#testing-tab" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>see how we do it</div>
-          </a> -->
+          </a>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new beige">
+  <div class="section-new beige" id="testing-tab">
     <div class="wrapper w-container">
       <div data-animation="cross" data-duration="500" data-infinite="1" class="slider-services-2 w-slider">
         <div class="mask w-slider-mask">
