--- a/usability-testing.html
+++ b/usability-testing.html
@@ -256,13 +256,13 @@
                   transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
                   stroke-linejoin="round" stroke-width="2"></path>
               </svg></div>
-            <div class="tab-text-1">Contextual <br>testing</div>
+            <div class="tab-text-1">Contextual <br>Testing</div>
           </a>
         </div>
         <div class="w-tab-content">
           <div data-w-tab="1" class="w-tab-pane">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Controlled Environment testing</div>
+              <div class="text-h2-2 black left">Controlled Environment Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
                   launched in the market by testing it with a sample population [small group of actual users].It helps the
@@ -273,7 +273,7 @@
           </div>
           <div data-w-tab="2" class="w-tab-pane w--tab-active">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Exploratory testing</div>
+              <div class="text-h2-2 black left">Exploratory Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
                   launched in the market by testing it with a sample population [small group of actual users].It helps the
@@ -295,7 +295,7 @@
           </div>
           <div data-w-tab="4" class="w-tab-pane">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Contextual testing</div>
+              <div class="text-h2-2 black left">Contextual Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
                   launched in the market by testing it with a sample population [small group of actual users].It helps the
@@ -329,11 +329,11 @@
         <a href="#Contextual-testing" class="services-grid-content w-inline-block">
           <div class="div-services-grid"><img src="images/Group 6460.svg" loading="lazy" alt=""
               class="icon-services"></div>
-          <div class="text-h5-grey-2">Contextual <br>testing</div>
+          <div class="text-h5-grey-2">Contextual <br>Testing</div>
         </a>
       </div>
       <div id="Controlled-Environment-Testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Controlled Environment testing</div>
+        <div class="text-h2-2 black left">Controlled Environment Testing</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
@@ -342,7 +342,7 @@
         </div>
       </div>
       <div id="Exploratory-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Exploratory testing</div>
+        <div class="text-h2-2 black left">Exploratory Testing</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
@@ -351,7 +351,7 @@
         </div>
       </div>
       <div id="Remote-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Remote testing</div>
+        <div class="text-h2-2 black left">Remote Testing</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
@@ -360,7 +360,7 @@
         </div>
       </div>
       <div id="Contextual-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Contextual testing</div>
+        <div class="text-h2-2 black left">Contextual Testing</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
