--- a/ui-design.html
+++ b/ui-design.html
@@ -107,88 +107,91 @@
       <div data-duration-in="500" data-duration-out="500" class="w-tabs">
         <div class="tabs-menu-3 w-tab-menu">
           <a data-w-tab="1" class="tab w-inline-block w-tab-link">
-            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24.287" height="25.719"
-                viewbox="0 0 24.287 25.719">
-                <g id="Group_5738" data-name="Group 5738" transform="translate(-399.5 -1878.381)">
-                  <path id="Path_9457" data-name="Path 9457"
-                    d="M4734.6,11462.1v6.411l-7.87,13.03s-2.536,3.909,2.438,4.559c.148-.036,15.9,0,15.9,0s5.038.092,2.592-4.559c.075.031-8.112-13.03-8.112-13.03v-6.411"
-                    transform="translate(-4325.584 -9583)" fill="none" stroke="currentColor" stroke-width="2"></path>
-                  <path id="Path_9458" data-name="Path 9458" d="M0,0H7.908" transform="translate(407.54 1879.381)"
-                    fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"></path>
-                  <line id="Line_99" data-name="Line 99" x2="14.784" transform="translate(404.02 1894.166)" fill="none"
-                    stroke="currentColor" stroke-linecap="round" stroke-width="2"></line>
-                </g>
-              </svg></div>
-            <div class="tab-text">Controlled Environment <br>Testing</div>
-          </a>
-          <a data-w-tab="2" class="tab w-inline-block w-tab-link w--current">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
-                <g id="Group_5739" data-name="Group 5739" transform="translate(-616 -1861)">
-                  <g id="Icon_feather-compass" data-name="Icon feather-compass" transform="translate(617 1862)">
-                    <path id="Path_9459" data-name="Path 9459" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
-                      transform="translate(-3 -3)" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round" stroke-width="2"></path>
-                    <path id="Path_9460" data-name="Path 9460" d="M20.12,11.64,18,18l-6.36,2.12,2.12-6.36Z"
-                      transform="translate(-3.88 -3.88)" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round" stroke-width="2"></path>
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <g id="Group_6451" data-name="Group 6451" transform="translate(-9109 -470)">
+                <g id="Group_5751" data-name="Group 5751" transform="translate(8815 -2938)">
+                  <rect id="Rectangle_4386" data-name="Rectangle 4386" width="24" height="24" transform="translate(302 3416)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
+                  <path id="Path_9486" data-name="Path 9486" d="M2793.531,12997.733v12.78h-3.454v10.205" transform="translate(-2478.037 -9581.294)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                  <path id="Path_9487" data-name="Path 9487" d="M2810.073,13002.124s2.287,2.05,4.316,0" transform="translate(-2504 -9578)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                  <path id="Path_9488" data-name="Path 9488" d="M2810.072,13002.123s7.242,6.492,13.667,0" transform="translate(-2503 -9570)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                  <g id="Rectangle_4387" data-name="Rectangle 4387" transform="translate(318 3423)" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect width="4" height="4" rx="2" stroke="none"/>
+                    <rect x="1" y="1" width="2" height="2" rx="1" fill="none"/>
                   </g>
                 </g>
-              </svg></div>
-            <div class="tab-text-1">Exploratory <br>Testing</div>
+              </g>
+            </svg>
+            </div>
+            <div class="tab-text-1">User Interface <br>Design</div>
+          </a>
+          <a data-w-tab="2" class="tab w-inline-block w-tab-link w--current">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <g id="Group_6458" data-name="Group 6458" transform="translate(-9262 -536)">
+                <g id="Icon_feather-smartphone" data-name="Icon feather-smartphone" transform="translate(9266.5 541)">
+                  <path id="Path_9474" data-name="Path 9474" d="M9.884,3H21.8a2.384,2.384,0,0,1,2.384,2.384V24.455A2.384,2.384,0,0,1,21.8,26.839H9.884A2.384,2.384,0,0,1,7.5,24.455V5.384A2.384,2.384,0,0,1,9.884,3Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                  <path id="Path_9475" data-name="Path 9475" d="M18,27h1.376" transform="translate(-2.599 -3.929)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                  <path id="Path_9476" data-name="Path 9476" d="M11.23,13.709,13.6,16.077l5.156-5.156" transform="translate(0.85 -0.103)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                </g>
+              </g>
+            </svg>
+            </div>
+            <div class="tab-text-1">User Interface <br>Evaluation</div>
           </a>
           <a data-w-tab="3" class="tab w-inline-block w-tab-link">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
-                <g id="Icon_feather-globe" data-name="Icon feather-globe" transform="translate(-2 -2)">
-                  <path id="Path_9461" data-name="Path 9461" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
-                    transform="translate(0 0)" fill="none" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-width="2"></path>
-                  <path id="Path_9462" data-name="Path 9462" d="M3,18H27" transform="translate(0 -3)" fill="none"
-                    stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-                  <path id="Path_9463" data-name="Path 9463"
-                    d="M16,3a20.486,20.486,0,0,1,4,12,20.486,20.486,0,0,1-4,12,20.486,20.486,0,0,1-4-12A20.486,20.486,0,0,1,16,3Z"
-                    transform="translate(-1)" fill="none" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-width="2"></path>
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <g id="Group_6457" data-name="Group 6457" transform="translate(-9336 -523)">
+                <g id="Group_5753" data-name="Group 5753" transform="translate(9047.258 -2883)">
+                  <path id="Path_9489" data-name="Path 9489" d="M12.379,0c6.837,0,12.379,5.8,12.379,5.8s-5.542,5.8-12.379,5.8S0,5.8,0,5.8,5.542,0,12.379,0Z" transform="translate(296.742 3420.5)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
+                  <g id="Ellipse_1155" data-name="Ellipse 1155" transform="translate(303 3420)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2">
+                    <circle cx="6.5" cy="6.5" r="6.5" stroke="none"/>
+                    <circle cx="6.5" cy="6.5" r="5.5" fill="none"/>
+                  </g>
+                  <g id="Ellipse_1156" data-name="Ellipse 1156" transform="translate(307 3424)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2">
+                    <circle cx="2.5" cy="2.5" r="2.5" stroke="none"/>
+                    <circle cx="2.5" cy="2.5" r="1.5" fill="none"/>
+                  </g>
                 </g>
-              </svg></div>
-            <div class="tab-text-1">Remote<br>Testing</div>
+              </g>
+            </svg>
+            </div>
+            <div class="tab-text-1">Visual Design<br>System</div>
           </a>
           <a data-w-tab="4" class="tab w-inline-block w-tab-link">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="18.8" height="26"
-                viewbox="0 0 18.8 26">
-                <path id="Icon_material-location-on" data-name="Icon material-location-on"
-                  d="M15.9,3a8.394,8.394,0,0,0-8.4,8.4c0,6.3,8.4,15.6,8.4,15.6s8.4-9.3,8.4-15.6A8.394,8.394,0,0,0,15.9,3Zm0,11.4a3,3,0,1,1,3-3A3,3,0,0,1,15.9,14.4Z"
-                  transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
-                  stroke-linejoin="round" stroke-width="2"></path>
-              </svg></div>
-            <div class="tab-text-1">Contextual <br>testing</div>
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <g id="Group_6456" data-name="Group 6456" transform="translate(-9421 -510)">
+                <g id="Group_5752" data-name="Group 5752" transform="translate(8447.5 -1077.5)">
+                  <path id="Icon_open-flag" data-name="Icon open-flag" d="M9,0V12h6v3H27L21,9.09,27,3H18V0Z" transform="translate(977.5 1595.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                  <line id="Line_126" data-name="Line 126" y2="24" transform="translate(983.5 1595.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                </g>
+              </g>
+            </svg>
+            </div>
+            <div class="tab-text-1">Branding &<br>Identity</div>
           </a>
         </div>
         <div class="w-tab-content">
           <div data-w-tab="1" class="w-tab-pane">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Controlled Environment testing</div>
+              <div class="text-h2-2 black left">User Interface Design</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">The confluence of multiple devices and the consistency across all the interfaces is 
+                  the key. We design as per the standards of different interfaces keeping in mind the Behavioural Science of 
+                  different users and their priorities.</div>
               </div>
             </div>
           </div>
           <div data-w-tab="2" class="w-tab-pane w--tab-active">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Exploratory testing</div>
+              <div class="text-h2-2 black left">User Interface Evaluation</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">Evaluating user interface design every once in a while will give us insights and 
+                  ideas about enhancing design and business based on user's feedback.</div>
               </div>
             </div>
           </div>
           <div data-w-tab="3" class="w-tab-pane">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Remote Testing</div>
+              <div class="text-h2-2 black left">Visual Design System</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
                   launched in the market by testing it with a sample population [small group of actual users].It helps the
@@ -199,7 +202,7 @@
           </div>
           <div data-w-tab="4" class="w-tab-pane">
             <div class="w-layout-grid grid-2-column-usability">
-              <div class="text-h2-2 black left">Contextual testing</div>
+              <div class="text-h2-2 black left">Branding & Identity</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
                   launched in the market by testing it with a sample population [small group of actual users].It helps the
@@ -215,29 +218,44 @@
   <div class="section-new-2" id="testing-tab-2">
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
-        <a href="#Controlled-Environment-Testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group-5738.svg" loading="lazy" alt="" class="icon-services">
+        <a href="#User-Interface-Design" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group 6451.svg" loading="lazy" alt="" class="icon-services">
           </div>
-          <div class="text-h5-grey-2">Controlled Environment<br>Testing</div>
+          <div class="text-h5-grey-2">User Interface <br>Design</div>
         </a>
-        <a href="#Exploratory-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group-5771.svg" loading="lazy" alt="" class="icon-services">
+        <a href="#User-Interface-Evaluation" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group 6458.svg" loading="lazy" alt="" class="icon-services">
           </div>
-          <div class="text-h5-grey-2">Exploratory <br>Testing</div>
+          <div class="text-h5-grey-2">User Interface <br>Evaluation</div>
         </a>
-        <a href="#Remote-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Icon-feather-globe.svg" loading="lazy" alt=""
+        <a href="#Visual-Design-System" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group 6457.svg" loading="lazy" alt=""
               class="icon-services"></div>
-          <div class="text-h5-grey-2">Remote<br>Testing</div>
+          <div class="text-h5-grey-2">Visual Design<br>System</div>
         </a>
-        <a href="#Contextual-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Icon-material-location-on.svg" loading="lazy" alt=""
+        <a href="#Branding-Identity" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group 6456.svg" loading="lazy" alt=""
               class="icon-services"></div>
-          <div class="text-h5-grey-2">Contextual <br>testing</div>
+          <div class="text-h5-grey-2">Branding &<br>Identity</div>
         </a>
       </div>
-      <div id="Controlled-Environment-Testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Controlled Environment testing</div>
+      <div id="User-Interface-Design" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">User Interface Design</div>
+        <div>
+          <div class="text-h3-3 black">The confluence of multiple devices and the consistency across all the interfaces is 
+            the key. We design as per the standards of different interfaces keeping in mind the Behavioural Science of 
+            different users and their priorities.</div>
+        </div>
+      </div>
+      <div id="User-Interface-Evaluation" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">User Interface Evaluation</div>
+        <div>
+          <div class="text-h3-3 black">Evaluating user interface design every once in a while will give us insights and 
+            ideas about enhancing design and business based on user's feedback.</div>
+        </div>
+      </div>
+      <div id="Visual-Design-System" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Visual Design System</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
@@ -245,26 +263,8 @@
             [small group of actual users].</div>
         </div>
       </div>
-      <div id="Exploratory-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Exploratory testing</div>
-        <div>
-          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
-            the market by testing it with a sample population [small group of actual users].It helps the business to
-            evaluates the product or website before it is launched in the market by testing it with a sample population
-            [small group of actual users].</div>
-        </div>
-      </div>
-      <div id="Remote-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Remote testing</div>
-        <div>
-          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
-            the market by testing it with a sample population [small group of actual users].It helps the business to
-            evaluates the product or website before it is launched in the market by testing it with a sample population
-            [small group of actual users].</div>
-        </div>
-      </div>
-      <div id="Contextual-testing" class="w-layout-grid grid-2-column-2">
-        <div class="text-h2-2 black left">Contextual testing</div>
+      <div id="Branding-Identity" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Branding & Identity</div>
         <div>
           <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
             the market by testing it with a sample population [small group of actual users].It helps the business to
