--- a/ui-design.html
+++ b/ui-design.html
@@ -38,11 +38,11 @@
           <div class="text-h4---22px black">Having interface fluent enough for the user to communicate with the system or product is fundamental necessity.</div>
           <a href="#testing-tab-1" class="text-button-link-1-usability1 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>See usability testing methods</div>
+            <div>see how we do it</div>
           </a>
           <a href="#testing-tab-2" class="text-button-link-1-usability2 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>See usability testing methods</div>
+            <div>see how we do it</div>
           </a>
         </div>
       </div>
@@ -174,9 +174,9 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">User Interface Design</div>
               <div>
-                <div class="text-h3-3 black">The confluence of multiple devices and the consistency across all the interfaces is 
-                  the key. We design as per the standards of different interfaces keeping in mind the Behavioural Science of 
-                  different users and their priorities.</div>
+                <div class="text-h3-3 black">The Interface Design is the skeleton on which all the components are to be laid, 
+                  it also pays way for a Responsive Design when it spans across devices; making it with at most precision 
+                  helps speed up the Development process and by making reusable components wherever possible.</div>
               </div>
             </div>
           </div>
@@ -185,7 +185,9 @@
               <div class="text-h2-2 black left">User Interface Evaluation</div>
               <div>
                 <div class="text-h3-3 black">Evaluating user interface design every once in a while will give us insights and 
-                  ideas about enhancing design and business based on user's feedback.</div>
+                  ideas about enhancing design and business based on user’s feedback and analytics insights. Funnelling the 
+                  areas of impact and enhancing the design helps the improve the overall customer satisfaction of the 
+                  website or application.</div>
               </div>
             </div>
           </div>
@@ -193,10 +195,9 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Visual Design System</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">The standard that define the companies branding in reference to Theme/Colour 
+                  usage, fonts styles, visuals in accordance with the Product Typography even extending to tone and grammar. 
+                  A well defined interface brings attention and notice to the Product even among thousands of other brands.</div>
               </div>
             </div>
           </div>
@@ -204,10 +205,10 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Branding & Identity</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">A great product demands individuality; as per studies, “it is often said that 
+                  customers form an opinion about a Company/Product within seconds. A well-designed logo is an easy way to 
+                  convey to potential customers that your business is professional, trustworthy, and provides quality 
+                  goods or services”. In short it defines the personality of the Product!</div>
               </div>
             </div>
           </div>
@@ -242,34 +243,35 @@
       <div id="User-Interface-Design" class="w-layout-grid grid-2-column-2">
         <div class="text-h2-2 black left">User Interface Design</div>
         <div>
-          <div class="text-h3-3 black">The confluence of multiple devices and the consistency across all the interfaces is 
-            the key. We design as per the standards of different interfaces keeping in mind the Behavioural Science of 
-            different users and their priorities.</div>
+          <div class="text-h3-3 black">The Interface Design is the skeleton on which all the components are to be laid, 
+            it also pays way for a Responsive Design when it spans across devices; making it with at most precision 
+            helps speed up the Development process and by making reusable components wherever possible.</div>
         </div>
       </div>
       <div id="User-Interface-Evaluation" class="w-layout-grid grid-2-column-2">
         <div class="text-h2-2 black left">User Interface Evaluation</div>
         <div>
           <div class="text-h3-3 black">Evaluating user interface design every once in a while will give us insights and 
-            ideas about enhancing design and business based on user's feedback.</div>
+            ideas about enhancing design and business based on user’s feedback and analytics insights. Funnelling the 
+            areas of impact and enhancing the design helps the improve the overall customer satisfaction of the 
+            website or application.</div>
         </div>
       </div>
       <div id="Visual-Design-System" class="w-layout-grid grid-2-column-2">
         <div class="text-h2-2 black left">Visual Design System</div>
         <div>
-          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
-            the market by testing it with a sample population [small group of actual users].It helps the business to
-            evaluates the product or website before it is launched in the market by testing it with a sample population
-            [small group of actual users].</div>
+          <div class="text-h3-3 black">The standard that define the companies branding in reference to Theme/Colour usage, 
+            fonts styles, visuals in accordance with the Product Typography even extending to tone and grammar. 
+            A well defined interface brings attention and notice to the Product even among thousands of other brands.</div>
         </div>
       </div>
       <div id="Branding-Identity" class="w-layout-grid grid-2-column-2">
         <div class="text-h2-2 black left">Branding & Identity</div>
         <div>
-          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
-            the market by testing it with a sample population [small group of actual users].It helps the business to
-            evaluates the product or website before it is launched in the market by testing it with a sample population
-            [small group of actual users].</div>
+          <div class="text-h3-3 black">A great product demands individuality; as per studies, “it is often said that 
+            customers form an opinion about a Company/Product within seconds. A well-designed logo is an easy way to 
+            convey to potential customers that your business is professional, trustworthy, and provides quality goods or 
+            services”. In short it defines the personality of the Product!</div>
         </div>
       </div>
     </div>
