--- a/usability-testing.html
+++ b/usability-testing.html
@@ -38,11 +38,11 @@
           <div class="text-h4---22px black">Reduce the risk of usability issues before the product launces into the market</div>
           <a href="#testing-tab-1" class="text-button-link-1-usability1 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>See usability testing methods</div>
+            <div>see how we do it</div>
           </a>
           <a href="#testing-tab-2" class="text-button-link-1-usability2 w-inline-block">
             <div class="button-link-icon"></div>
-            <div>See usability testing methods</div>
+            <div>see how we do it</div>
           </a>
         </div>
       </div>
