--- a/usability-testing.html
+++ b/usability-testing.html
@@ -264,10 +264,7 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Controlled Environment Testing</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">A controlled environment testing session is moderated in person or remotely by a trained researcher; who walks through the tasks to participants, answers their queries, and asks follow-up questions. Conversely, an uncontrolled test is done without direct supervision; participants might be in a lab, but it's more likely they are in their own homes and/or using their own devices to browse the website that is being tested. But they can also be unobtrusively monitored by the researcher.</div>
               </div>
             </div>
           </div>
@@ -275,10 +272,7 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Exploratory Testing</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">Researchers or Participants can browse through the website or application without any pre-planned tasks. The aim of the testing is mostly to uncover maximum usability issues with minimal time. This type of testing typically can be done in the early stages of product development and helps researchers pinpoint gaps in the market, identify potential new features, and workshop new ideas.</div>
               </div>
             </div>
           </div>
@@ -286,10 +280,7 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Remote Testing</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">As the name suggest participants can be geographically in any location but would be instructed by trained researchers to brief them on the tasks to be performed and they are observed and analyzed based on their body language and facial expressions and follow-up questions.</div>
               </div>
             </div>
           </div>
@@ -297,10 +288,7 @@
             <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Contextual Testing</div>
               <div>
-                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                  launched in the market by testing it with a sample population [small group of actual users].It helps the
-                  business to evaluates the product or website before it is launched in the market by testing it with a
-                  sample population [small group of actual users].</div>
+                <div class="text-h3-3 black">Contextual testing is a semi-informal method to obtain information about the context of use, where users are first asked a set of standard questions and then observed and questioned while they use the website or application in their own environments. This method suits when an existing application needs revamp or enhancement to collect maximum possible data for the existing users.</div>
               </div>
             </div>
           </div>
